# data_engineer_tech_test

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
src/test/transform/: test_composite.py
src/transactions/: config.py  config_logger.py  main.py
src/transactions/transform/: composite.py  parser.py  transformation.py
